# biliup-my

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scarecrow.spec
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
crates/scarecrow-cli/: Cargo.toml  flake.nix
crates/scarecrow-cli/src/: cli.rs  downloader.rs  main.rs  upload_lock.rs  uploader.rs
crates/scarecrow-cli/src/server/: app.rs  config.rs
crates/scarecrow-core/: Cargo.toml
crates/scarecrow-core/src/: client.rs
crates/scarecrow-core/src/downloader/: extractor.rs
crates/stream-gears/: Cargo.toml
crates/stream-gears/src/: danmaku.rs  lib.rs  login.rs  server.rs  uploader.rs
crates/stream-gears/tests/: test_server.py  test_upload.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: Config.vue  Files.vue  Templates.vue  Twitch.vue  Users.vue  Videos.vue
go-backend/: Dockerfile  docker-compose.yml  go.mod
go-backend/cmd/server/: main.go
go-backend/frontend/: index.html  package.json  vite.config.js
go-backend/frontend/src/: App.vue
go-backend/frontend/src/api/: index.js
go-backend/internal/api/: handler.go  router.go
go-backend/internal/config/: config.go
go-backend/internal/database/: database.go
go-backend/internal/model/: model.go
go-backend/internal/service/: bilibili.go  manager.go  twitch.go
public/: config.toml  config.yaml
scarecrow/: __init__.py  __main__.py
scarecrow/Danmaku/: __init__.py
scarecrow/common/: __init__.py  reload.py  util.py
scarecrow/engine/: decorators.py  download.py
scarecrow/plugins/: __init__.py  twitch.py
scarecrow/web/public/: index.html
(+22 files in other folders)
