[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
# Include additional files
#include = [ "scarecrow/web/public/**/*" ]
#data = "scarecrow/web/public"
python-packages = ["scarecrow"]
manifest-path = "crates/stream-gears/Cargo.toml"

[project]
name = "scarecrow"
readme = "README.md"
authors = [{ name = "ForgQi" }]
description = "稻草人的SCARECROW — Twitch stream recorder"
keywords = ["twitch recorder scarecrow"]
urls = { Homepage = "https://github.com/scarecrow/scarecrow" }
requires-python = ">= 3.9"
dependencies = [
    "psutil >= 5.4.6",
    "aiofiles >= 22.1.0",
    "yt-dlp >= 2025.7.21",
    "Pillow >= 5.2.0",
    "aiohttp[speedups] >= 3.9.5", # aio-libs/aiohttp#10519
    "requests >= 2.32.3",
    "httpx[http2] >= 0.28.1",
    "httpcore >= 1.0.7",
    "PyYAML >= 4.2b1",
    "streamlink >= 7.5.0",
    "tomli >= 1.1.0; python_version < '3.11'",
    "m3u8 >= 6.0.0",
    "truststore >= 0.10.1; python_version >= '3.10'",
    "async-lru >= 2.0.5",
]
dynamic = ["version"]

[project.optional-dependencies]
selenium = ["selenium >= 3.8.1"]

[project.scripts]
scarecrow = "scarecrow.__main__:arg_parser"

#[tool.setuptools]
#license-files = ["LICENSE"]
#include-package-data = false

#[tool.setuptools.package-data]
#scarecrow = ["common/*.ini", "web/public/**", "web/public/build/*", "database/migration/*", "Danmaku/douyin_util/webmssdk.js"]
#
#[tool.setuptools.packages.find]
#include = ["scarecrow*"]
#namespaces = false
#
#[tool.setuptools.dynamic]
#version = { attr = "scarecrow.__version__" }
